# bwtzip-openmp

./: .gitignore  CMakeLists.txt  README.md
dataset/: README.md
doc/: README.md  compile-project.md  download-datasets.md
doc/speedup_analysis/: README.md  pbwtzip2_speedup_analysis.ipynb  pbwtzip_speedup_analysis.ipynb  requirements.txt  utils_execution.py  utils_visualization.py
include/: bwtunzip.hh  bwtzip.hh  bwtzip_ahuff.hh  bwtzip_common.hh  bwtzip_file.hh  bwtzip_huff.hh  bwtzip_sha1.hh  bwtzip_sha512.hh  bwtzip_suffixstlsort.hh  bwtzip_suffixtree.hh  chunk.hh  gcell.hh  log.hh  pbwtzip.hh  pbwtzip2.hh  sha1prng.hh  wclock.hh
script/: build_profile.sh  download_all.sh  download_files.sh  download_human_genome.sh  download_large_english_text.sh  download_large_source_code.sh
src/: Makefile  bcell.cc  bcell.hh  bcell_png.cc  bwtunzip.cc  bwtzip.cc  bwtzip.hh  bwtzip_ahuff.cc  bwtzip_arith.cc  bwtzip_arith.hh  bwtzip_bzip2.cc  bwtzip_bzip2.hh  bwtzip_common.cc  bwtzip_common.hh  bwtzip_file.cc  bwtzip_file.hh  bwtzip_huff.cc  bwtzip_mtf.cc  bwtzip_mtf.hh  bwtzip_sha1.cc  bwtzip_sha512.cc  bwtzip_srle.cc  bwtzip_srle.hh  bwtzip_suffixarray.cc  bwtzip_suffixarray.hh  bwtzip_suffixbentleysedgewick.cc  bwtzip_suffixbentleysedgewick.hh  bwtzip_suffixstlsort.cc  bwtzip_suffixtree.cc  bwtzip_zle.cc  bwtzip_zle.hh  bwtzip_zlib.cc  bwtzip_zlib.hh  chunk.cc  clock.cc  clock.hh  common.hh  log.cc  main.cc  main_arithverify.cc  (+29 more)
test/: human_genome_compression_test.cpp  large_english_text_compression_test.cpp  main.cpp  test_pbwtzip.cpp  test_pbwtzip2.cpp  test_unit1.cpp
